care/force-app/main/default/objects/OnDemandSync_Setting__mdt/OnDemandSync_Setting__mdt.object-meta.xml
<CustomObject>
    <label>OnDemandSync Setting</label>
    <pluralLabel>OnDemandSync Settings</pluralLabel>
</CustomObject>