care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <inlineHelpText>Indicates how many records are sent to the US Platform at once.  If we run into DML limit errors, reducing this size may help, but we should be wary of making this number too small.</inlineHelpText>
    <label>Batch Size (HTTP Job)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>