care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Batch_Size_Link_Job__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size_Link_Job__c</fullName>
    <inlineHelpText>The number of Cases associated with Accounts per transaction.  Consider reducing if we&apos;re seeing CPU Limit errors.</inlineHelpText>
    <label>Batch Size (Link Job)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>