care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Bypass_Error_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Error_Monitor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the Error Monitor should be bypassed</inlineHelpText>
    <label>Bypass Error Monitor</label>
    <type>Checkbox</type>
</CustomField>