care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Bypass_OnDemand_Sync__c.field-meta.xml
<CustomField>
    <fullName>Bypass_OnDemand_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enabling this causes Salesforce to stop searching for members in remote platforms. Use only when either those platforms or ODS are suffering catastrophic failures. When enabled, all cases will be set with an ODS Request  Status of &quot;Complete - ODS Bypass&quot;.</inlineHelpText>
    <label>Bypass OnDemand Sync</label>
    <type>Checkbox</type>
</CustomField>