care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Error_Notification_CC__c.field-meta.xml
<CustomField>
    <fullName>Error_Notification_CC__c</fullName>
    <label>Error Notification CC</label>
    <type>Email</type>
</CustomField>