care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Error_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Error_Notification_Email__c</fullName>
    <label>Error Notification Email</label>
    <type>Email</type>
</CustomField>