care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Error_Notification_Gap__c.field-meta.xml
<CustomField>
    <fullName>Error_Notification_Gap__c</fullName>
    <inlineHelpText>The minimum gap in hours between error notification emails.  
For example, if set to 24 hours, emails will be only be sent every 24 hours (even if more errors continue to be generated in the meantime).</inlineHelpText>
    <label>Error Notification Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>