care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Error_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Error_Threshold__c</fullName>
    <inlineHelpText>Indicates what percentage of errors should generate an email alert from the Error Montor (see wiki for more details).</inlineHelpText>
    <label>Error Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>