care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Gap_Between_Batches_Link_Job__c.field-meta.xml
<CustomField>
    <fullName>Gap_Between_Batches_Link_Job__c</fullName>
    <inlineHelpText>Indicates how often the LinkAccountToCase job should run (in minutes). Rule of thumb: in Apex Jobs, measure the average job duration (gap between Submitted Date &amp; Completion Date) &amp; pad that by 1 or 2 minutes to ensure the job never run concurrently.</inlineHelpText>
    <label>Gap Between Batches (Link Job)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>