care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Min_Case_For_Error_Notification__c.field-meta.xml
<CustomField>
    <fullName>Min_Case_For_Error_Notification__c</fullName>
    <inlineHelpText>Indicates how many ODS Cases need to exist within the last 24 hours before we consider applying the error notification logic.  This is useful to ensure we&apos;re seeing significant results.  
At launch it was set to 100.</inlineHelpText>
    <label>Min Case For Error Notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>