care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Production_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Production_API_Key__c</fullName>
    <label>Production API Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>