care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Retry_Limit__c.field-meta.xml
<CustomField>
    <fullName>Retry_Limit__c</fullName>
    <label>Retry Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>