care/force-app/main/default/objects/OnDemandSync_Setting__mdt/fields/Staging_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Staging_API_Key__c</fullName>
    <label>Staging API Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>