care/force-app/main/default/objects/OnDemandSync_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Bypass_OnDemand_Sync__c</columns>
    <columns>Gap_Between_Batches__c</columns>
    <columns>Batch_Size__c</columns>
    <columns>Gap_Between_Batches_Link_Job__c</columns>
    <columns>Retry_Limit__c</columns>
    <columns>Bypass_Error_Monitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>